tests/machine/x/cpp/match_full.error
line 4: ../../../tests/machine/x/cpp/match_full.cpp:4:16: error: non-local lambda expression cannot have a capture-default
    4 | auto label = ([&]() {
      |                ^
../../../tests/machine/x/cpp/match_full.cpp:15:15: error: non-local lambda expression cannot have a capture-default
   15 | auto mood = ([&]() {
      |               ^
../../../tests/machine/x/cpp/match_full.cpp:26:17: error: non-local lambda expression cannot have a capture-default
   26 | auto status = ([&]() {
      |                 ^
../../../tests/machine/x/cpp/match_full.cpp:35:15: warning: use of ‘auto’ in parameter declaration only available with ‘-std=c++20’ or ‘-fconcepts’
   35 | auto classify(auto n) {
      |               ^~~~

  3 | auto x = 2;
  4 | auto label = ([&]() {
  5 |   auto __v = x;
